--- a/wine-quality/requirements.txt
+++ b/wine-quality/requirements.txt
@@ -32,9 +32,12 @@ python-dateutil==2.6.1
 pytz==2017.3
 pyzmq==16.0.4
 qtconsole==4.3.1
+scikit-learn==0.19.1
+scipy==1.0.0
 Send2Trash==1.4.2
 simplegeneric==0.8.1
 six==1.11.0
+sklearn==0.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.3
