--- a/wine-quality/requirements.txt
+++ b/wine-quality/requirements.txt
@@ -1,5 +1,6 @@
 appnope==0.1.0
 bleach==2.1.2
+cycler==0.10.0
 decorator==4.2.1
 entrypoints==0.2.3
 html5lib==1.0.1
@@ -14,7 +15,9 @@ jupyter==1.0.0
 jupyter-client==5.2.1
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+Keras==2.1.4
 MarkupSafe==1.0
+matplotlib==2.1.2
 mistune==0.8.3
 nbconvert==5.3.1
 nbformat==4.4.0
@@ -28,8 +31,10 @@ pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.5.2
 Pygments==2.2.0
+pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2017.3
+PyYAML==3.12
 pyzmq==16.0.4
 qtconsole==4.3.1
 scikit-learn==0.19.1
