--- a/titanic/requirements.txt
+++ b/titanic/requirements.txt
@@ -1,12 +1,26 @@
-absl-py==0.1.10
+absl-py==0.2.2
 appnope==0.1.0
+astor==0.6.2
+backports-abc==0.5
+backports.functools-lru-cache==1.5
+backports.shutil-get-terminal-size==1.0.0
+backports.weakref==1.0.post1
 bleach==1.5.0
+certifi==2018.4.16
+configparser==3.5.0
 cycler==0.10.0
 decorator==4.2.1
 entrypoints==0.2.3
+enum34==1.1.6
+funcsigs==1.0.2
+functools32==3.2.3.post2
+futures==3.2.0
+gast==0.2.0
+grpcio==1.12.1
+h5py==2.8.0
 html5lib==0.9999999
 ipykernel==4.8.2
-ipython==6.2.1
+ipython==5.7.0
 ipython-genutils==0.2.0
 ipywidgets==7.1.2
 jedi==0.11.1
@@ -16,10 +30,14 @@ jupyter==1.0.0
 jupyter-client==5.2.2
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+Keras==2.2.0
+Keras-Applications==1.0.2
+Keras-Preprocessing==1.0.1
 Markdown==2.6.11
 MarkupSafe==1.0
 matplotlib==2.1.2
 mistune==0.8.3
+mock==2.0.0
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.4.0
@@ -27,6 +45,8 @@ numpy==1.14.1
 pandas==0.22.0
 pandocfilters==1.4.2
 parso==0.1.1
+pathlib2==2.3.2
+pbr==4.0.4
 pexpect==4.4.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
@@ -36,12 +56,22 @@ Pygments==2.2.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
 pytz==2018.3
+PyYAML==3.12
 pyzmq==17.0.0
 qtconsole==4.3.1
+scandir==1.7
+scikit-learn==0.19.1
+scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
+singledispatch==3.4.0.3
 six==1.11.0
-tensorflow==https://storage.googleapis.com/tensorflow/mac/cpu/tensorflow-1.5.0-py3-none-any.whl
+sklearn==0.0
+subprocess32==3.5.2
+TBB==0.1
+tensorboard==1.8.0
+tensorflow==1.8.0
+termcolor==1.1.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==4.5.3
